Change the description.

--- a/docs/checks/internal/checks.yaml
+++ b/docs/checks/internal/checks.yaml
@@ -234,8 +234,8 @@ checks:
 
       This check tries to determine if the project runs tests before pull requests are
       merged. It is currently limited to repositories hosted on GitHub, and does not
-      support other source hosting repositories (i.e., Forges or GitLab). This check 
-      only considers repositories which run test and rewards them if they are successful.
+      support other source hosting repositories (i.e., Forges). This check only 
+      considers tests which run successfully.
 
       Running tests helps developers catch mistakes early on, which can reduce the
       number of vulnerabilities that find their way into a project.
